--- a/weatherBySteven/package.json
+++ b/weatherBySteven/package.json
@@ -14,7 +14,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "fontawesome-free": "^1.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
